--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" href="images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site to convert text to speech" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-utilities.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Speech To Text</title>
-  </head>
-  <body class="bg-dark">
-    <div class="container pt-4">
-      <div class="row align-items-center text-center">
-        <div class="col-md-4">
-          <h1 class="text-light">Speech to Text</h1>
-        </div>
-        <div class="col-md-4 offset-md-4">
-          <img src="images/hero.svg" alt="hero" width="300" height="150">
-        </div>
-      </div>
-      <div class="mt-4" id="div_language">
-        <p class="lead text-light">Select Language</p>
-        <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
-        <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
-      </div>
-      <p class="lead text-light mt-4">Transcript</p>
-      <div class="p-3" style="border: 1px solid gray; height: 245px; border-radius: 8px; overflow-y: auto; line-height: 3rem;">
-        <span id="final" class="text-light fw-bold"></span>
-        <span id="interim" class="text-secondary"></span>
-      </div>
+</head>
 
-      <!-- Control Buttons -->
-      <div class="mb-4">
-        <button class="btn btn-success mt-3 me-3" id="start">Start</button>
-        <button class="btn btn-danger mt-3 me-3" id="stop">Stop</button>
-        <span id="status" class="lead mt-3 text-danger fw-bold" style="display: none; float: right;">Listenting ...</span>
-      </div>
+<body class="bg-dark">
+    <div class="container pt-4">
+        <div class="row align-items-center text-center">
+            <div class="col-md-4">
+                <h1 class="text-light">Speech to Text</h1>
+            </div>
+            <div class="col-md-4 offset-md-4">
+                <img src="images/hero.svg" alt="hero" width="300" height="150">
+            </div>
+        </div>
+        <div class="mt-4" id="div_language">
+            <p class="lead text-light">Select Language</p>
+            <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
+            <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="lead text-light mt-4">Transcript</p>
+            </div>
+            <div class="col">
+                <span id="status" class="lead mt-4 text-danger fw-bold" style="display: none; float: right;">Listenting ...</span>
+            </div>
+        </div>
+        <div class="p-3" style="border: 1px solid gray; height: 245px; border-radius: 8px; overflow-y: auto;">
+            <span id="final" class="text-light fw-bold"></span>
+            <span id="interim" class="text-secondary"></span>
+        </div>
+
+        <!-- Control Buttons -->
+        <div class="mb-4">
+            <button class="btn btn-success mt-3 me-3" id="start">Start</button>
+            <button class="btn btn-danger mt-3 me-3" id="stop">Stop</button>
+            <button class="btn btn-warning mt-3 me-3" id="reset">Reset</button>
+            <button class="btn btn-primary mt-3 me-3" id="save">Save</button>
+            <!-- <span id="status" class="lead mt-3 text-danger fw-bold" style="display: none; float: right;">Listenting ...</span> -->
+        </div>
     </div>
-  </body>
-  <script src="js/language.js"></script>
-  <script src="js/speechRecognition.js"></script>
+</body>
+<script src="js/language.js"></script>
+<script src="js/speechRecognition.js"></script>
+
 </html>
